# agentic-calender-app

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  llm_event_extractor.py  pyproject.toml  requirements-dev.txt  requirements.txt  simple_server.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_migration.py  2767aefdc825_add_chat_messages_table.py
backend/app/: main.py
backend/app/api/: errors.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: chat.py  events.py
backend/app/core/: config.py  database.py
backend/app/models/: __init__.py  base.py  chat.py  event.py
backend/app/scripts/: seed.py
backend/app/services/: ai_service.py  event_service.py
backend/app/services/llm/: __init__.py  base.py  factory.py  local.py
backend/tests/: conftest.py  test_ai_service.py  test_event_service.py  test_events_api.py  test_main.py
frontend/: .eslintrc.cjs  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: CalendarView.tsx  ChatPanel.tsx  EventModal.tsx  MiniCalendar.tsx  SearchBox.tsx  Sidebar.tsx  Toolbar.tsx
frontend/src/components/__tests__/: Toolbar.test.tsx
frontend/src/components/views/: DayView.tsx  MonthView.tsx  WeekView.tsx
frontend/src/contexts/: ThemeContext.tsx
frontend/src/hooks/: useEvents.ts
frontend/src/services/: api.ts
frontend/src/test/: setup.ts
frontend/src/types/: api.ts
frontend/src/utils/: date.ts
frontend/src/utils/__tests__/: date.test.ts
frontend/tests/e2e/: calendar-crud.spec.ts
